/*
 * Copyright 2022 EPAM Systems
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
apply plugin: 'java-library'

apply from: "${project.scripts_url}/${project.scripts_branch}/build-quality.gradle"
apply from: "${project.scripts_url}/${project.scripts_branch}/release-commons.gradle"
apply from: "${project.scripts_url}/${project.scripts_branch}/signing.gradle"
apply from: "${project.scripts_url}/${project.scripts_branch}/jacoco.gradle"

project.ext.limits = [
        'instruction': 50,
        'branch'     : 40,
        'line'       : 45,
        'complexity' : 45,
        'method'     : 50,
        'class'      : 60
]

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

repositories {
    mavenCentral()
}

dependencies {
    compileOnly "com.epam.reportportal:client-java:${client_version}"

    implementation 'org.jsoup:jsoup:1.15.3'
    implementation 'org.apache.commons:commons-lang3:3.18.0'

    testImplementation "com.epam.reportportal:client-java:${client_version}"
    testImplementation 'com.epam.reportportal:agent-java-test-utils:0.1.0'

    testImplementation("org.junit.platform:junit-platform-runner:${junit5_runner_version}") {
        exclude module: 'junit'
    }
    testImplementation "org.junit.jupiter:junit-jupiter-params:${junit5_version}"
    testImplementation "org.junit.jupiter:junit-jupiter-engine:${junit5_version}"
    testImplementation 'org.hamcrest:hamcrest-core:2.2'
    testImplementation "org.mockito:mockito-core:${mockito_version}"
    testImplementation "org.mockito:mockito-inline:${mockito_version}"
    testImplementation 'org.apache.httpcomponents:httpcore:4.4.15'
}

test {
    useJUnitPlatform()
    outputs.upToDateWhen { false }
}

wrapper {
    gradleVersion = '6.9.2'
}

release {
    git {
        requireBranch = 'main'
    }
}

build.dependsOn jacocoTestReport
